--- a/PlayFramework/app/views/main.scala.html
+++ b/PlayFramework/app/views/main.scala.html
@@ -5,11 +5,20 @@
 <html lang="en">
     <head>
         <title>@title</title>
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap/bootstrap.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap/bootstrap-theme.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-        <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
+
+        <script src="@routes.Assets.versioned("javascripts/jquery-2.1.4.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap/bootstrap.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("../../public/javascripts/main.js")" type="text/javascript"></script>
     </head>
     <body>
-        @content
+        @Headers
+        <div class="container">
+            @content
+        </div>
+        @Footer
     </body>
 </html>
