commit for update table mapping

--- a/PlayFramework/app/views/Header.scala.html
+++ b/PlayFramework/app/views/Header.scala.html
@@ -1,5 +1,5 @@
-@()
+@(message: String, isShowLogo: Boolean = true)
 
-<div class="">
+<div id="header_panel" class="row">
     <h1>XXX</h1>
 </div>
