--- a/PlayFramework/app/views/main.scala.html
+++ b/PlayFramework/app/views/main.scala.html
@@ -12,13 +12,13 @@
 
         <script src="@routes.Assets.versioned("javascripts/jquery-2.1.4.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/bootstrap/bootstrap.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.versioned("../../public/javascripts/main.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
     </head>
     <body>
-        @Headers
+        @Header("XXX", true)
         <div class="container">
-            @content
+        @content
         </div>
-        @Footer
+
     </body>
 </html>
