--- a/PlayFramework/app/views/main.scala.html
+++ b/PlayFramework/app/views/main.scala.html
@@ -5,11 +5,20 @@
 <html lang="en">
     <head>
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-        <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
+
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap/bootstrap.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap/bootstrap-datepicker.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/styles.css")">
+
+        <script src="@routes.Assets.versioned("javascripts/jquery/jquery-1.11.3.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap/bootstrap.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap/bootstrap-datepicker.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/scripts.js")" type="text/javascript"></script>
     </head>
     <body>
-        @content
+        <div class="container">
+            @content
+        </div>
     </body>
 </html>
